# esp32-trip-meter

./: README.md
.github/workflows/: doc-gen.yml
doc/: Doxyfile
pcb/: .gitignore  fuel_economy_meter-rescue.lib  fuel_economy_meter.kicad_pcb  fuel_economy_meter.kicad_pro  fuel_economy_meter.kicad_sch  fuel_economy_meter.sch  sym-lib-table
src/fuel_economy_meter/: .gitignore  bt.cpp  bt.h  config.h  elm327.cpp  elm327.h  fuel_economy_meter.ino  log_stream.cpp  log_stream.h  trip.cpp  trip.h  trip_eeprom.cpp  trip_eeprom.h
trip-meter/: Cargo.toml  diagram.json  wokwi.toml
trip-meter/.cargo/: config.toml
trip-meter/src/: elm_327.rs  freq_cnt.rs  main.rs
